eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "a078990b3c4d94f128da3cc0ef9ceafe-4b39ca7cf70699c6.elb.eu-west-1.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-bank-api-service
            port:
              number: 80
  tls:
  - hosts:
    - a078990b3c4d94f128da3cc0ef9ceafe-4b39ca7cf70699c6.elb.eu-west-1.amazonaws.com
    secretName: simple-bank-api-cert
